modules/gdscript/tests/scripts/analyzer/errors/cyclic_inheritance.gd
func test():
	print(InnerA.new())

class InnerA extends InnerB:
	pass

class InnerB extends InnerA:
	pass
